Create logger and time utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,37 @@
- # hakkero/CMakeLists.txt
 cmake_minimum_required(VERSION 3.20)
-project(Hakkero LANGUAGES CXX)
+set(Hakkero_VERSION 0.1.0)
+project(Hakkero VERSION ${Hakkero_VERSION} LANGUAGES CXX)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library(Hakkero SHARED
-  # Core
-  Core/Engine.cpp
-  Core/Application.cpp
+    core/logger.cpp
+    core/time_utils.cpp
+)
 
-  # Graphics
-  Graphics/Vulkan/Context.cpp
-  Graphics/Shader.cpp
+include(GenerateExportHeader)
+generate_export_header(Hakkero BASE_NAME Hakkero)
 
-  # Audio
-  Audio/AudioEngine.cpp
+target_include_directories(Hakkero PUBLIC 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>  
+  $<INSTALL_INTERFACE:include>                  
+  ${CMAKE_CURRENT_BINARY_DIR}     
+  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 target_include_directories(Hakkero PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/core
 )
 
 target_include_directories(Hakkero PRIVATE
-  ${CMAKE_CURRENT_SOURCE_DIR}/Graphics/Vulkan
+  ${CMAKE_CURRENT_SOURCE_DIR}/graphics/Vulkan
 )
 
 find_package(glfw3 REQUIRED)
-find_package(Vulkan REQUIRED)
+find_package(Vulkan REQUIRED COMPONENTS glslc)
 find_package(OpenAL REQUIRED)
 
 target_link_libraries(Hakkero PRIVATE
@@ -37,6 +41,12 @@ target_link_libraries(Hakkero PRIVATE
 )
 
 target_compile_options(Hakkero PRIVATE -Wall -Wextra -Werror)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/hakkero.pc
+  DESTINATION lib/pkgconfig
+)
+
+option(BUILD_SAMPLES "Build samples" ON)
 
 install(TARGETS Hakkero
   LIBRARY DESTINATION lib
@@ -48,4 +58,20 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
   FILES_MATCHING 
   PATTERN "*.hpp" 
   PATTERN "*.cpp"
+  PATTERN "samples" EXCLUDE
 )
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/hakkero.pc
+  DESTINATION lib/pkgconfig
+)
+
+if(BUILD_SAMPLES)
+  if(TARGET Hakkero AND glfw3_FOUND AND Vulkan_FOUND) 
+    add_subdirectory(samples)
+  else()
+    message(WARNING "Samples skipped - missing dependencies")
+    message(STATUS "Hakkero target exists: ${TARGET Hakkero}")
+    message(STATUS "GLFW found: ${glfw3_FOUND}")
+    message(STATUS "Vulkan found: ${Vulkan_FOUND}")
+  endif()
+endif()
