Create neccessary code for swapchain creation and image views

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(Hakkero SHARED
+add_library(Hakkero SHARED # There has to be a better way to do this. Check on it later.
     core/logger.cpp
     core/time_utils.cpp
     core/vulkan/vulkan_instance.cpp
@@ -14,6 +14,8 @@ add_library(Hakkero SHARED
     core/vulkan/vulkan_device.cpp
     core/vulkan/vulkan_types.cpp
     core/vulkan/vulkan_surface.cpp
+    core/vulkan/vulkan_swapchain.cpp
+    core/vulkan/vulkan_image.cpp
 )
 
 include(GenerateExportHeader)
